src/App.css
/* :root {
  --main-color: rgb(48, 53, 63);
  --card-color: rgb(197, 193, 189);
}

#root {
  max-width: 1280px;
  height: auto;
  margin: 0 auto;
  text-align: center;
  width: 100%;
  height: auto;
  box-sizing: border-box;
  background-color: var(--main-color);
}


#game {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 90% 10%;
  grid-template-rows: 20% 80%;
  grid-template-areas:
      "header scoreboard"
      "card-container card-container";
  


}

#header {
  grid-area: header;
  line-height: 0.2rem;
  height: 100%;
  align-self: start;
}

#header > * {
  margin: 15px;
  color: white;
}

#scoreboard {
  grid-area: scoreboard;
  height: 100%;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

#card-container {
  grid-area: card-container;
  height: auto;
  padding: 15px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: auto;
  gap: 15px;
  
  
}

.pokemon-card {
  border-radius: 15px;
  width: 75%;
  height: 95%;
  background-color: var(--card-color);
  justify-self: center;
  cursor: pointer;
  transition: box-shadow 0.5s ease, transform 120ms ease-in;

}

.pokemon-card>img {
  height: 60%;
  width: 60%;
  
}

.pokemon-card:hover, .restart-button:hover {
  box-shadow: 0 5px 25px rgb(190, 191, 70);
  transform: scale(105%);
}

.endGame {
  color: white;
}

.restart-button {
  all: unset;
  cursor: pointer;
  color: rgb(48, 53, 63);
  background-color: rgb(197, 193, 189);
  border-radius: 15px;
  width: 10rem;
  height: 4rem;
  margin: 5px;
  transition: box-shadow 0.5s ease, transform 120ms ease-in;
}

@media (max-width: 600px) {
  #card-container {
    grid-template-columns: repeat(2, 1fr);
    
  }
  #game {
    display: grid;
    grid-template-columns: 90% 10%;
    grid-template-rows: 20% 80%;
    grid-template-areas:
      "header scoreboard"
      "card-container card-container";



  }
} */


:root {
  --main-color: rgb(48, 53, 63);
  --card-color: rgb(197, 193, 189);
}

body {
  background-color: var(--main-color);
  box-sizing: border-box;
}

#header, .endGame {
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  
}

#header>h3 {
  margin: 0;
}
div#scoreboard {
  color: white;
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
}


#game {
  display: flex;
  flex-direction: column;



}

#card-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto;
  gap: 15px;
  padding: 15px;
  cursor: pointer;
}

.pokemon-card {
  display: flex;
  flex-direction: column;
  border-radius: 15px;
  background-color: var(--card-color);
}

.pokemon-card>h3 {
  align-self: center;
}

.endGame>button {
  all: unset;
  color: var(--main-color);
  background-color: rgb(197, 193, 189);
  margin: 15px;
  border-radius: 15px;
  width: 10rem;
  text-align: center;
}

